<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LearningPro</string>
    <string name="menu_settings_action">settings</string>
    <string name="bManageRemindersText">Manage reminders</string>
    <string name="bOpenCurrentCourseText">Open current</string>
    <string name="bCreateNewCourseText">CREATE</string>
    <string name="linkToDownloadedIcons">https://icons8.com/</string>
    <string name="defaultCourseDescription">This course is for learning about computer architecture related topics, like : how computer works, what is inside of it, more deep look into computer architecture</string>
    <string name="defaultCourseTitle">ASK Exam</string>
    <string name="defaultCourseQuestionsAmount">225</string>
    <string name="questionIconContentDescription">\?</string>
    <string name="defaultCourseDoneQuestionsAmount">60%</string>
    <string name="create_course_dialog_title">Create new course :</string>
    <string name="create_course_dialog_hint_title">title :</string>
    <string name="create_course_dialog_hint_description">description :</string>
    <string name="create_course_dialog_default_file_name"><u>no file found</u></string>
    <string name="create_course_dialog_file_name_title">File name :</string>
    <string name="b_back">Back</string>
    <string name="b_create">Create</string>
    <string name="courseRowItemDescriptionHint">(description)</string>
    <string name="failedToChooseFileMessage">some problems acquired, please try again</string>
    <string name="questionIcon_tooltip">questions amount</string>
    <string name="DoneQuestionsIcon_tooltip">amount of answered questions</string>
    <string name="newCourseNotificationTicker">New course creation started</string>
    <string name="newCourseNotificationContentTitle">New course creation started "<xliff:g id="courseTitle">%s</xliff:g>"</string>

    <string name="courseSavedNotificationContentTitle">Course "<xliff:g id="courseTitle">%s</xliff:g>" was successfully created</string>
    <string name="courseSavedNotificationContentTicker">successfully saved</string>
    <string name="courseSavedNotificationActionContinue">continue creation</string>
    <string name="newCourseNotificationContentTitleComplete">Continue creation</string>
    <string name="settingsPreferencesLabel">Settings</string>
    <string name="SettingsAboutIconsTitle">Icons downloaded from</string>
    <string name="SettingsAboutAuthorTitle">Author</string>
    <string name="SettingAboutTitle">About</string>
    <string name="SettingAboutAuthorSummary">Me</string>
    <string name="tabMainName">Main</string>
    <string name="tabAllCoursesName">All Courses</string>
    <string name="notificationsChanelDescription">Important notifications for showing and executing downloading/processing of new course</string>
    <string name="course">Course</string>
    <string name="customDialogPositiveButtonText">Do</string>
    <string name="customDialogNegativeButtonText">Back</string>
    <string name="title_activity_test">TEST</string>
    <string name="courseRowNotReviewedContentDescription">not reviewed questions</string>
    <string name="notReviewedTooltip">course cards not reviewed</string>
    <string name="questionPreviewAcceptButton">Accept</string>
    <string name="questionPreviewSaveButton">Save</string>
    <string name="questionPreviewEditButton">Edit</string>
    <string name="questionPreviewDeleteButton">Delete</string>
</resources>
