<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/button_selector"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tvCourseTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/defaultCourseTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivQuestionsIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCourseQuestionsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/defaultCourseQuestionsAmount"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCourseTitle" />

    <ImageView
        android:id="@+id/ivQuestionsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:clickable="true"
        android:contentDescription="@string/questionIconContentDescription"
        android:focusable="true"
        android:scaleX="2"
        android:scaleY="2"
        android:tooltipText="@string/questionIcon_tooltip"
        app:layout_constraintEnd_toStartOf="@+id/tvCourseQuestionsAmount"
        app:layout_constraintTop_toTopOf="@+id/tvCourseQuestionsAmount"
        app:srcCompat="@drawable/icon_question" />

    <TextView
        android:id="@+id/tvCourseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_round_corners"
        android:hint="@string/courseRowItemDescriptionHint"
        android:lines="5"
        android:maxLines="8"
        android:text="@string/defaultCourseDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCourseTitle" />

    <TextView
        android:id="@+id/tvDoneQuestionsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:drawableLeft="@drawable/icon_done_question"
        android:drawableStart="@drawable/icon_done_question"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/defaultCourseDoneQuestionsAmount"
        android:textColor="@color/primaryTextColor"
        android:tooltipText="@string/DoneQuestionsIcon_tooltip"
        app:layout_constraintEnd_toEndOf="@+id/pbDoneQuestionsAmount"
        app:layout_constraintStart_toStartOf="@+id/pbDoneQuestionsAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvCourseDescription" />

    <ProgressBar
        android:id="@+id/pbDoneQuestionsAmount"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="8dp"
        android:minHeight="20dp"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDoneQuestionsAmount" />

    <ImageView
        android:id="@+id/ivNotReviewedAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:clickable="true"
        android:contentDescription="@string/courseRowNotReviewedContentDescription"
        android:focusable="true"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:tooltipText="@string/notReviewedTooltip"
        app:layout_constraintBottom_toBottomOf="@+id/tvCourseTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCourseTitle"
        app:srcCompat="@drawable/alert_circle" />
</android.support.constraint.ConstraintLayout>